@@ -31,6 +31,8 @@ import org.openqa.selenium.safari.SafariOptions;
 import solutions.bellatrix.core.configuration.ConfigurationService;
 import solutions.bellatrix.core.utilities.DebugInformation;
 import solutions.bellatrix.core.utilities.Log;
+import solutions.bellatrix.core.utilities.SecretsResolver;
+import solutions.bellatrix.core.utilities.Log;
 import solutions.bellatrix.core.utilities.TimestampBuilder;
 import solutions.bellatrix.web.configuration.GridSettings;
 import solutions.bellatrix.web.configuration.WebSettings;
@@ -38,11 +40,18 @@ import solutions.bellatrix.web.configuration.WebSettings;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.time.Duration;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.List;
 import java.util.Properties;
-import java.util.concurrent.TimeUnit;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+
+import static io.restassured.RestAssured.given;
 
 public class DriverService {
     private static final ThreadLocal<Boolean> DISPOSED = ThreadLocal.withInitial(() -> true);
@@ -50,7 +59,7 @@ public class DriverService {
     private static final ThreadLocal<HashMap<String, String>> CUSTOM_DRIVER_OPTIONS;
     private static final ThreadLocal<WebDriver> WRAPPED_DRIVER;
     private static boolean isBuildNameSet = false;
-    private  static String buildName;
+    private static String buildName;
 
     static {
         CUSTOM_DRIVER_OPTIONS = new ThreadLocal<>();
@@ -92,15 +101,14 @@ public class DriverService {
                 var gridSettings = webSettings.getGridSettings().stream().filter(g -> g.getProviderName().equals(executionType.toLowerCase())).findFirst();
                 assert gridSettings.isPresent() : String.format("The specified execution type '%s' is not declared in the configuration", executionType);
                 driver = initializeDriverGridMode(gridSettings.get());
-            }
-            else {
+            } else {
                 var gridSettings = webSettings.getGridSettings().stream().filter(g -> g.getProviderName().equals(executionType.toLowerCase())).findFirst();
                 assert gridSettings.isPresent() : String.format("The specified execution type '%s' is not declared in the configuration", executionType);
                 driver = initializeDriverCloudGridMode(gridSettings.get());
             }
 
-            driver.manage().timeouts().pageLoadTimeout(ConfigurationService.get(WebSettings.class).getTimeoutSettings().getPageLoadTimeout(), TimeUnit.SECONDS);
-            driver.manage().timeouts().setScriptTimeout(ConfigurationService.get(WebSettings.class).getTimeoutSettings().getScriptTimeout(), TimeUnit.SECONDS);
+            driver.manage().timeouts().pageLoadTimeout(Duration.ofSeconds(ConfigurationService.get(WebSettings.class).getTimeoutSettings().getPageLoadTimeout()));
+            driver.manage().timeouts().setScriptTimeout(Duration.ofSeconds(ConfigurationService.get(WebSettings.class).getTimeoutSettings().getScriptTimeout()));
 
             if(getBrowserConfiguration().getHeight() != 0 && getBrowserConfiguration().getWidth() != 0) {
                 changeWindowSize(driver);
@@ -110,7 +118,6 @@ public class DriverService {
             }
 
             Log.info(String.format("Window resized to dimensions: %s", driver.manage().window().getSize().toString()));
-
             WRAPPED_DRIVER.set(driver);
 
             return driver;
@@ -150,17 +157,18 @@ public class DriverService {
         // Anton: maybe this is something else for other clouds, should be tested.
         // If this is the case, we need to have branching per provider name.
         options.put("sessionName", getBrowserConfiguration().getTestName());
-//        if (gridSettings.getProviderName() == "browserstack") {
-//            options.put("sessionName", getBrowserConfiguration().getTestName());
-//        }
+        // if (gridSettings.getProviderName() == "browserstack") {
+        // options.put("sessionName", getBrowserConfiguration().getTestName());
+        // }
 
         addGridOptions(options, gridSettings);
 
         caps.setCapability(gridSettings.getOptionsName(), options);
         WebDriver driver = null;
         try {
-            driver = new RemoteWebDriver(new URL(gridSettings.getUrl()), caps);
-        } catch (MalformedURLException e) {
+            var url = getUrl(gridSettings.getUrl());
+            driver = new RemoteWebDriver(new URI(url).toURL(), caps);
+        } catch (Exception e) {
             DebugInformation.printStackTrace(e);
         }
 
@@ -216,8 +224,11 @@ public class DriverService {
 
         WebDriver driver = null;
         try {
-            driver = new RemoteWebDriver(new URL(gridSettings.getUrl()), caps);
-        } catch (MalformedURLException e) {
+            var gridUrl = gridSettings.getUrl();
+            var url  = getUrl(gridUrl);
+
+            driver = new RemoteWebDriver(new URI(url).toURL(), caps);
+        } catch (MalformedURLException | URISyntaxException e) {
             DebugInformation.printStackTrace(e);
         }
 
@@ -238,8 +249,10 @@ public class DriverService {
 
         switch (BROWSER_CONFIGURATION.get().getBrowser()) {
             case CHROME -> {
+                //WebDriverManager.chromedriver().setup();
                 var chromeOptions = new ChromeOptions();
                 addDriverOptions(chromeOptions);
+                chromeOptions.addArguments("--log-level=3", "--remote-allow-origins=*");
                 addDriverCapabilities(chromeOptions);
                 chromeOptions.addArguments("--log-level=3","--remote-allow-origins=*");
                 chromeOptions.setAcceptInsecureCerts(true);
@@ -273,7 +286,7 @@ public class DriverService {
                 var firefoxHeadlessOptions = new FirefoxOptions();
                 addDriverOptions(firefoxHeadlessOptions);
                 firefoxHeadlessOptions.setAcceptInsecureCerts(true);
-                firefoxHeadlessOptions.setHeadless(true);
+                firefoxHeadlessOptions.addArguments("--headless");
                 if (shouldCaptureHttpTraffic) firefoxHeadlessOptions.setProxy(proxyConfig);
                 driver = new FirefoxDriver(firefoxHeadlessOptions);
             }
@@ -322,38 +335,68 @@ public class DriverService {
     }
 
     private static <TOption extends MutableCapabilities> void addGridOptions(HashMap<String, Object> options, GridSettings gridSettings) {
+        Log.info("Add WebDriver Options:");
+        Log.info("");
         for (var entry : gridSettings.getArguments()) {
             for (var c : entry.entrySet()) {
                 if (c.getKey().toLowerCase().contains("build")) {
                     var buildName = getBuildName();
                     if (buildName == null) {
-                        buildName = c.getValue();
+                        buildName = c.getValue().toString();
                     }
 
                     options.put(c.getKey(), buildName);
-                }
-                else {
-                    if (c.getValue().startsWith("env_")) {
-                        var envValue = System.getProperty(c.getValue().replace("env_", ""));
+                    Log.info(c.getKey() + " = " + buildName);
+                } else {
+                    if (c.getValue() instanceof String && c.getValue().toString().startsWith("{env_")) {
+                        var envValue = SecretsResolver.getSecret(c.getValue().toString());
                         options.put(c.getKey(), envValue);
+                        Log.info(c.getKey() + " = " + envValue);
                     } else {
                         options.put(c.getKey(), c.getValue());
+                        Log.info(c.getKey() + " = " + c.getValue());
                     }
                 }
             }
+
+            if ("lambdatest".equalsIgnoreCase(gridSettings.getProviderName())) {
+                options.put("lambdaMaskCommands", new String[]{"setValues", "setCookies", "getCookies"});
+
+                try {
+                    var usernameSecret = gridSettings.getArguments().get(0).get("username").toString();
+                    var accessKeySecret = gridSettings.getArguments().get(0).get("accessKey").toString();
+                    var usernameValue = SecretsResolver.getSecret(usernameSecret);
+                    var accessKeyValue = SecretsResolver.getSecret(accessKeySecret);
+
+                    var res = given().auth().preemptive().basic(usernameValue, accessKeyValue)
+                            .get("https://api.lambdatest.com/automation/api/v1/user-files");
+
+                    options.put("lambda:userFiles", res.body().jsonPath().getList("data.key"));
+                } catch (Exception e) {
+                    DebugInformation.printStackTrace(e);
+                }
+
+
+            }
+
+            Log.info("");
         }
     }
 
     private static <TOption extends MutableCapabilities> void addGridOptions(TOption options, GridSettings gridSettings) {
         for (var entry : gridSettings.getArguments()) {
             for (var c : entry.entrySet()) {
-                if (c.getValue().startsWith("env_")) {
-                    var envValue = System.getProperty(c.getValue().replace("env_", ""));
+                if (c.getValue() instanceof String && c.getValue().toString().startsWith("{env_")) {
+                    var envValue = SecretsResolver.getSecret(c.getValue().toString());
                     options.setCapability(c.getKey(), envValue);
                 } else {
                     options.setCapability(c.getKey(), c.getValue());
                 }
             }
+        }
+
+        if ("lambdatest".equalsIgnoreCase(gridSettings.getProviderName())) {
+            options.setCapability("lambdaMaskCommands", new String[]{"setValues", "setCookies", "getCookies"});
         }
     }
 
@@ -373,7 +416,10 @@ public class DriverService {
     }
 
     private static String getBuildName() {
-        buildName = System.getProperty("buildName");
+        if (!isBuildNameSet) {
+            buildName = System.getProperty("buildName");
+        }
+
         if (buildName == null) {
             InputStream input = ConfigurationService.class.getResourceAsStream("/application.properties");
             var p = new Properties();
@@ -383,7 +429,9 @@ public class DriverService {
                 return null;
             }
 
-            buildName = p.getProperty("buildName");
+            if (!isBuildNameSet) {
+                buildName = p.getProperty("buildName");
+            }
 
             if (buildName.equals("{randomNumber}") && !isBuildNameSet) {
                 buildName = TimestampBuilder.buildUniqueTextByPrefix("LE_");
@@ -394,12 +442,35 @@ public class DriverService {
         return buildName;
     }
 
+    private static String getUrl(String url) {
+        String result = url;
+        if (url.startsWith("{env_")) {
+            result = SecretsResolver.getSecret(url);
+        } else if (url.contains("{env_")) {
+            String pattern = "\\{env_.*?\\}";
+            Pattern compiledPattern = Pattern.compile(pattern);
+            Matcher matcher = compiledPattern.matcher(url);
+            List<String> allMatches = new ArrayList<String>();
+
+            while (matcher.find()) {
+                allMatches.add(matcher.group());
+            }
+
+            for (String match : allMatches) {
+                result = result.replace(match, SecretsResolver.getSecret(match));
+            }
+        }
+
+        return result;
+    }
+
     public static void close() {
         if (DISPOSED.get()) {
             return;
         }
 
         if (WRAPPED_DRIVER.get() != null) {
+            DebugInformation.debugInfo("SHUTTING DOWN WRAPPED_DRIVER");
             WRAPPED_DRIVER.get().quit();
             if (CUSTOM_DRIVER_OPTIONS.get() != null) {
                 CUSTOM_DRIVER_OPTIONS.get().clear();
